Use List.getLast() for the last path segment in the Java generator
Replace get(size() - 1) on operation paths in JavaTypeTranslator and
FunctionGenerator, dropping the local that only existed to index it.